[CU-86b4frdzu] Refactor SQL query templates and improve identifier quoting methods in TrinoCatalog